create card, Cases and fix refresh into _document

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,12 +10,12 @@ body {
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: sans-serif;
 }
 
 input,
 textarea {
-  font-family: 'Open Sans', sans-serif;
+  font-family: sans-serif;
 }
 
 a {
